force-app/main/default/objects/MTDYTD_Trend_Data__c/MTDYTD_Trend_Data__c.object-meta.xml
<CustomObject>
    <description>Creating a custom table to display the dashboard based on the trends.</description>
    <label>MTDYTD Trend Data</label>
    <nameField>
        <displayFormat>Trend-{0000}</displayFormat>
        <label>Trend Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MTDYTD Trends Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>