force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Actual_Trend__c.field-meta.xml
<CustomField>
    <fullName>Actual_Trend__c</fullName>
    <formula>IF(
Variance_Actual_MTD__c &gt;10, &quot;UP&quot;,
IF(
AND(
Variance_Actual_MTD__c &gt;-10 , Variance_Actual_MTD__c &lt;10), &quot;SAME&quot;, &quot;DOWN&quot;
)
)</formula>
    <label>Actual Trend</label>
    <type>Text</type>
</CustomField>