force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/BatchErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>BatchErrorMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BatchErrorMessage</label>
    <type>TextArea</type>
</CustomField>