force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/BrisbaneHostRole__c.field-meta.xml
<CustomField>
    <fullName>BrisbaneHostRole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BrisbaneHostRole</label>
    <type>TextArea</type>
</CustomField>