force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/CashTheo_LYTDComp__c.field-meta.xml
<CustomField>
    <fullName>CashTheo_LYTDComp__c</fullName>
    <label>CashTheo_LYTDComp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>