force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/CashTheo_MTD__c.field-meta.xml
<CustomField>
    <fullName>CashTheo_MTD__c</fullName>
    <label>CashTheo_MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>