force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MTDYTD Trends Data</relationshipLabel>
    <relationshipName>MTDYTD_Trends_Data</relationshipName>
    <type>Lookup</type>
</CustomField>