force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Gaming_Days_M1to3__c.field-meta.xml
<CustomField>
    <fullName>Gaming_Days_M1to3__c</fullName>
    <label>Gaming_Days_M1to3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>