force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/GCHostRole__c.field-meta.xml
<CustomField>
    <fullName>GCHostRole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GCHostRole</label>
    <length>255</length>
    <type>Text</type>
</CustomField>