force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Host1_Target__c.field-meta.xml
<CustomField>
    <fullName>Host1_Target__c</fullName>
    <formula>IF (Host_Sydney__r.Id = Logged_In_User__c, Host_Sydney__r.MTD_Target__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host1 Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>