force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Host_GC__c.field-meta.xml
<CustomField>
    <fullName>Host_GC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host - GC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MTDYTD_Trends_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>