force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Host_GC_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_GC_Role_Name__c</fullName>
    <formula>Contact__r.Host_GC__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host - GC Role Name</label>
    <type>Text</type>
</CustomField>