force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Host_International_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_International_Role_Name__c</fullName>
    <formula>Contact__r.Host_International__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host - International Role Name</label>
    <type>Text</type>
</CustomField>