force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Host_is_TRUE__c.field-meta.xml
<CustomField>
    <fullName>Host_is_TRUE__c</fullName>
    <formula>IF (OR(Host_GC__r.Id = Logged_In_User__c, 
Host_International__r.Id = Logged_In_User__c,
Host_Sydney__r.Id  = Logged_In_User__c,
Host_Brisbane__r.Id  = Logged_In_User__c),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host is TRUE</label>
    <type>Checkbox</type>
</CustomField>