force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Host_Sydney__c.field-meta.xml
<CustomField>
    <fullName>Host_Sydney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host - Sydney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MTDYTD_Trends_Data3</relationshipName>
    <type>Lookup</type>
</CustomField>