force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Host_Sydney_RoleName__c.field-meta.xml
<CustomField>
    <fullName>Host_Sydney_RoleName__c</fullName>
    <formula>Contact__r.Host_Sydney__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host - Sydney Role Name</label>
    <type>Text</type>
</CustomField>