force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/InternationalHostRole__c.field-meta.xml
<CustomField>
    <fullName>InternationalHostRole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>InternationalHostRole</label>
    <length>255</length>
    <type>Text</type>
</CustomField>