force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User__c</fullName>
    <formula>$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In User</label>
    <type>Text</type>
</CustomField>