force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/SydneyHostRole__c.field-meta.xml
<CustomField>
    <fullName>SydneyHostRole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SydneyHostRole</label>
    <length>255</length>
    <type>Text</type>
</CustomField>