force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Trend__c.field-meta.xml
<CustomField>
    <fullName>Trend__c</fullName>
    <label>Trend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Downward Trend</fullName>
            </value>
            <value>
                <fullName>Upward Trend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>