force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Turnover_M1to3__c.field-meta.xml
<CustomField>
    <fullName>Turnover_M1to3__c</fullName>
    <label>Turnover_M1to3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>