force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Turnover_M4to6__c.field-meta.xml
<CustomField>
    <fullName>Turnover_M4to6__c</fullName>
    <label>Turnover_M4to6</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>