force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Turnover_MTD__c.field-meta.xml
<CustomField>
    <fullName>Turnover_MTD__c</fullName>
    <label>Turnover_MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>