force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Unique_Patrons_YTD__c.field-meta.xml
<CustomField>
    <fullName>Unique_Patrons_YTD__c</fullName>
    <label>Unique_Patrons_YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>