force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Variance_Actual_MTD__c.field-meta.xml
<CustomField>
    <fullName>Variance_Actual_MTD__c</fullName>
    <formula>((Actual_Win_M1to3__c - Actual_Win_M4to6__c) /Actual_Win_M4to6__c) *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Actual MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>