force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Variance_Trips_MTD__c.field-meta.xml
<CustomField>
    <fullName>Variance_Trips_MTD__c</fullName>
    <formula>(( Gaming_Days_M1to3__c  -  Gaming_Days_M4to6__c ) / Gaming_Days_M4to6__c ) *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Trips MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>