force-app/main/default/objects/MTDYTD_Trend_Data__c/fields/Variance_Unique_MTD__c.field-meta.xml
<CustomField>
    <fullName>Variance_Unique_MTD__c</fullName>
    <formula>( Unique_Patrons_M1to3__c  -(10/100 *  Unique_Patrons_M4to6__c  +  Unique_Patrons_M4to6__c ))/  Unique_Patrons_M1to3__c  *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Unique MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>