force-app/main/default/objects/MTDYTD_Trend_Data__c/listViews/Display_Hosts.listView-meta.xml
<ListView>
    <fullName>Display_Hosts</fullName>
    <columns>NAME</columns>
    <columns>Host_Brisbane__c</columns>
    <columns>Host_GC__c</columns>
    <columns>Host_International__c</columns>
    <columns>Host_Sydney__c</columns>
    <filterScope>Everything</filterScope>
    <label>Display Hosts</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>